[gd_scene load_steps=61 format=3 uid="uid://8xk7vjcr371x"]

[ext_resource type="Script" path="res://tutorial_screen.gd" id="1_lnlat"]
[ext_resource type="Texture2D" uid="uid://rdyr5fb3spxb" path="res://level/background/nightsky_1.png" id="2_dhbiw"]
[ext_resource type="Texture2D" uid="uid://btpcjj2r8q6pj" path="res://level/background/cityscroller_3.png" id="3_khs03"]
[ext_resource type="Texture2D" uid="uid://b0fgn0bnx1j55" path="res://level/background/cityscroller_4.png" id="4_3ubd7"]
[ext_resource type="Texture2D" uid="uid://m6e7n0n2o7it" path="res://level/background/cityscoller_5.png" id="5_chnip"]
[ext_resource type="FontFile" uid="uid://bf0q0pmkhfebo" path="res://fonts/PixelTandysoft-0rJG.ttf" id="6_ija6j"]
[ext_resource type="AudioStream" uid="uid://8fdmxw0dmaje" path="res://audio/welcometoparthneon.mp3" id="7_crnfg"]
[ext_resource type="AudioStream" uid="uid://c3g6kk8ssuwth" path="res://audio/Beat_02_Arpeggiator.mp3" id="8_3co0p"]
[ext_resource type="Texture2D" uid="uid://c2esqovrwlsqf" path="res://platforms/basic_neon_block_blue.png" id="9_0vrqd"]
[ext_resource type="Texture2D" uid="uid://0c1b8l6q4nx1" path="res://ui/gdb-playstation-2 cross flat.png" id="12_a1xsf"]
[ext_resource type="Texture2D" uid="uid://wfohouh0neh1" path="res://ui/exit_pixel_sign.png" id="12_gxc07"]
[ext_resource type="Texture2D" uid="uid://cpj2wevsuyukj" path="res://ui/gdb-playstation-2 triangle flat.png" id="13_8sgxc"]
[ext_resource type="Texture2D" uid="uid://ofd1p3w6cedb" path="res://ui/exit_pixel_sign_pressed.png" id="13_nfa0f"]
[ext_resource type="Texture2D" uid="uid://cubeavlr7yrqw" path="res://ui/exit_pixel_sign_focused.png" id="14_ivmnu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ow5o"]
bg_color = Color(0.2, 0.227451, 0.505882, 0.909804)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f4l8"]
atlas = ExtResource("2_dhbiw")
region = Rect2(0, 0, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_5woa5"]
atlas = ExtResource("2_dhbiw")
region = Rect2(1860, 0, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxqgs"]
atlas = ExtResource("2_dhbiw")
region = Rect2(3720, 0, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxjuo"]
atlas = ExtResource("2_dhbiw")
region = Rect2(5580, 0, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v215"]
atlas = ExtResource("2_dhbiw")
region = Rect2(7440, 0, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_15my7"]
atlas = ExtResource("2_dhbiw")
region = Rect2(0, 1110, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu7hy"]
atlas = ExtResource("2_dhbiw")
region = Rect2(1860, 1110, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_57aeq"]
atlas = ExtResource("2_dhbiw")
region = Rect2(3720, 1110, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_c311b"]
atlas = ExtResource("2_dhbiw")
region = Rect2(5580, 1110, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hqfa"]
atlas = ExtResource("2_dhbiw")
region = Rect2(7440, 1110, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d2h8"]
atlas = ExtResource("2_dhbiw")
region = Rect2(0, 2220, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_aml2w"]
atlas = ExtResource("2_dhbiw")
region = Rect2(1860, 2220, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xi46"]
atlas = ExtResource("2_dhbiw")
region = Rect2(3720, 2220, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mlfj"]
atlas = ExtResource("2_dhbiw")
region = Rect2(5580, 2220, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_jltog"]
atlas = ExtResource("2_dhbiw")
region = Rect2(7440, 2220, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksqhd"]
atlas = ExtResource("2_dhbiw")
region = Rect2(0, 3330, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_frvqr"]
atlas = ExtResource("2_dhbiw")
region = Rect2(1860, 3330, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kqts"]
atlas = ExtResource("2_dhbiw")
region = Rect2(3720, 3330, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_1atjw"]
atlas = ExtResource("2_dhbiw")
region = Rect2(5580, 3330, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2s5g"]
atlas = ExtResource("2_dhbiw")
region = Rect2(7440, 3330, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_shwo8"]
atlas = ExtResource("2_dhbiw")
region = Rect2(0, 4440, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu7sr"]
atlas = ExtResource("2_dhbiw")
region = Rect2(1860, 4440, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_uabar"]
atlas = ExtResource("2_dhbiw")
region = Rect2(3720, 4440, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qk0e"]
atlas = ExtResource("2_dhbiw")
region = Rect2(5580, 4440, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5hqx"]
atlas = ExtResource("2_dhbiw")
region = Rect2(7440, 4440, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivypg"]
atlas = ExtResource("2_dhbiw")
region = Rect2(0, 5550, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu4ig"]
atlas = ExtResource("2_dhbiw")
region = Rect2(1860, 5550, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1atw"]
atlas = ExtResource("2_dhbiw")
region = Rect2(3720, 5550, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyd3u"]
atlas = ExtResource("2_dhbiw")
region = Rect2(5580, 5550, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_s58wj"]
atlas = ExtResource("2_dhbiw")
region = Rect2(7440, 5550, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uljf"]
atlas = ExtResource("2_dhbiw")
region = Rect2(0, 6660, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnrqg"]
atlas = ExtResource("2_dhbiw")
region = Rect2(1860, 6660, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0nru"]
atlas = ExtResource("2_dhbiw")
region = Rect2(3720, 6660, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_htiil"]
atlas = ExtResource("2_dhbiw")
region = Rect2(5580, 6660, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqn6y"]
atlas = ExtResource("2_dhbiw")
region = Rect2(7440, 6660, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_un451"]
atlas = ExtResource("2_dhbiw")
region = Rect2(0, 7770, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hu87"]
atlas = ExtResource("2_dhbiw")
region = Rect2(1860, 7770, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7dgm"]
atlas = ExtResource("2_dhbiw")
region = Rect2(3720, 7770, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6j7s"]
atlas = ExtResource("2_dhbiw")
region = Rect2(5580, 7770, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ix7"]
atlas = ExtResource("2_dhbiw")
region = Rect2(7440, 7770, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfvwg"]
atlas = ExtResource("2_dhbiw")
region = Rect2(0, 8880, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyexp"]
atlas = ExtResource("2_dhbiw")
region = Rect2(1860, 8880, 1860, 1110)

[sub_resource type="AtlasTexture" id="AtlasTexture_susfd"]
atlas = ExtResource("2_dhbiw")
region = Rect2(3720, 8880, 1860, 1110)

[sub_resource type="SpriteFrames" id="SpriteFrames_q2das"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f4l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5woa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxqgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxjuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v215")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15my7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu7hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57aeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c311b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hqfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d2h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aml2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xi46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mlfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jltog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksqhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frvqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kqts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1atjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2s5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shwo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu7sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uabar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qk0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5hqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivypg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu4ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1atw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyd3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s58wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uljf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnrqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0nru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htiil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqn6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un451")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hu87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7dgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6j7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ix7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfvwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyexp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_susfd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dyb76"]
bg_color = Color(0.748004, 0.500216, 0.736765, 1)

[node name="TutorialScreen" type="Node2D"]
script = ExtResource("1_lnlat")

[node name="Panel" type="Panel" parent="."]
offset_right = 1924.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ow5o")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="NightSky" type="AnimatedSprite2D" parent="."]
position = Vector2(957, 552)
scale = Vector2(1.03548, 1.01441)
sprite_frames = SubResource("SpriteFrames_q2das")
frame_progress = 0.922205

[node name="NightSky2" type="AnimatedSprite2D" parent="."]
position = Vector2(969.5, -504)
scale = Vector2(1.04032, 1.01441)
sprite_frames = SubResource("SpriteFrames_q2das")
frame_progress = 0.522819

[node name="City3" type="Sprite2D" parent="."]
position = Vector2(5181, 600)
scale = Vector2(3, 3)
texture = ExtResource("3_khs03")

[node name="City4" type="Sprite2D" parent="."]
position = Vector2(5066, 674)
scale = Vector2(3, 3)
texture = ExtResource("4_3ubd7")

[node name="City5" type="Sprite2D" parent="."]
position = Vector2(5146, 758)
scale = Vector2(3, 3)
texture = ExtResource("5_chnip")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
offset_top = 3.0
offset_right = 38400.0
offset_bottom = 21583.0
scale = Vector2(0.05, 0.05)
theme_override_fonts/normal_font = ExtResource("6_ija6j")
theme_override_font_sizes/normal_font_size = 2000
bbcode_enabled = true
text = "[center]Controls[/center]"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 700.0
offset_top = 950.0
offset_right = 1255.0
offset_bottom = 1046.0
theme_override_constants/separation = 28

[node name="Back" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_ija6j")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_dyb76")
text = "  Back  "

[node name="Next" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_ija6j")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_dyb76")
text = "  Next  "

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Welcome" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_crnfg")
volume_db = -5.0
pitch_scale = 0.95

[node name="Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_3co0p")
volume_db = -6.0
pitch_scale = 0.85
autoplay = true

[node name="ScrollTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Prism" type="Sprite2D" parent="."]
position = Vector2(965, -398)
scale = Vector2(2, 2)
texture = ExtResource("9_0vrqd")

[node name="Panel2" type="Panel" parent="."]
offset_left = 270.0
offset_top = 81.0
offset_right = 1651.0
offset_bottom = 870.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ow5o")

[node name="RichTextLabel6" type="RichTextLabel" parent="Panel2"]
layout_mode = 0
offset_left = 29.0
offset_top = 656.0
offset_right = 1354.0
offset_bottom = 767.0
theme_override_fonts/normal_font = ExtResource("6_ija6j")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]Welcome to Parthneon. 
Your objective: SURVIVE as long as possible."

[node name="Panel3" type="Panel" parent="."]
offset_left = 270.0
offset_top = 81.0
offset_right = 1651.0
offset_bottom = 870.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ow5o")

[node name="RichTextLabel6" type="RichTextLabel" parent="Panel3"]
layout_mode = 0
offset_left = 29.0
offset_top = 606.0
offset_right = 1354.0
offset_bottom = 847.0
theme_override_fonts/normal_font = ExtResource("6_ija6j")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]Use Jump (  ) to leap between moving platforms. You may jump up through most, but spinning platforms will block you. Use Flash (  ) to shift through walls and obstacles."

[node name="Sprite2D" type="Sprite2D" parent="Panel3/RichTextLabel6"]
position = Vector2(288, 29)
scale = Vector2(3, 3)
texture = ExtResource("12_a1xsf")

[node name="Sprite2D2" type="Sprite2D" parent="Panel3/RichTextLabel6"]
position = Vector2(392, 131)
scale = Vector2(3, 3)
texture = ExtResource("13_8sgxc")

[node name="Panel4" type="Panel" parent="."]
offset_left = 270.0
offset_top = 81.0
offset_right = 1651.0
offset_bottom = 870.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ow5o")

[node name="RichTextLabel6" type="RichTextLabel" parent="Panel4"]
layout_mode = 0
offset_left = 29.0
offset_top = 652.0
offset_right = 1354.0
offset_bottom = 847.0
theme_override_fonts/normal_font = ExtResource("6_ija6j")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]Be Wary of enemy drones; Collision is fatal. Destory them with your flash technique (  )."

[node name="Sprite2D2" type="Sprite2D" parent="Panel4/RichTextLabel6"]
position = Vector2(951, 79)
scale = Vector2(3, 3)
texture = ExtResource("13_8sgxc")

[node name="Panel8" type="Panel" parent="."]
offset_left = 270.0
offset_top = 81.0
offset_right = 1651.0
offset_bottom = 870.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ow5o")

[node name="RichTextLabel6" type="RichTextLabel" parent="Panel8"]
layout_mode = 0
offset_left = 29.0
offset_top = 652.0
offset_right = 1354.0
offset_bottom = 847.0
theme_override_fonts/normal_font = ExtResource("6_ija6j")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]Destroying an enemy will net the player additional xp and an air boost. This air boost can be chained infinitely."

[node name="Panel5" type="Panel" parent="."]
offset_left = 270.0
offset_top = 81.0
offset_right = 1651.0
offset_bottom = 870.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ow5o")

[node name="RichTextLabel6" type="RichTextLabel" parent="Panel5"]
layout_mode = 0
offset_left = 29.0
offset_top = 670.0
offset_right = 1354.0
offset_bottom = 847.0
theme_override_fonts/normal_font = ExtResource("6_ija6j")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]Time survived increases your score: Collect Star Gems and take down enemies for xp multipliers. "

[node name="Panel6" type="Panel" parent="."]
offset_left = 270.0
offset_top = 81.0
offset_right = 1651.0
offset_bottom = 870.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ow5o")

[node name="RichTextLabel6" type="RichTextLabel" parent="Panel6"]
layout_mode = 0
offset_left = 29.0
offset_top = 658.0
offset_right = 1354.0
offset_bottom = 847.0
theme_override_fonts/normal_font = ExtResource("6_ija6j")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]Every 60 seconds, a Drone Boss Unit will engage. Survive to earn a rare blue gem."

[node name="Panel7" type="Panel" parent="."]
offset_left = 270.0
offset_top = 81.0
offset_right = 1651.0
offset_bottom = 870.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ow5o")

[node name="RichTextLabel6" type="RichTextLabel" parent="Panel7"]
layout_mode = 0
offset_left = 29.0
offset_top = 564.0
offset_right = 1354.0
offset_bottom = 847.0
theme_override_fonts/normal_font = ExtResource("6_ija6j")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]Will you make it to the end of parthneon?

Pass all challenges laid ahead and you may find yourself at the edge of space and time itself..."

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 25.0
offset_top = 955.0
offset_right = 625.0
offset_bottom = 1285.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("12_gxc07")
texture_pressed = ExtResource("13_nfa0f")
texture_focused = ExtResource("14_ivmnu")

[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="finished" from="Theme" to="." method="_on_theme_finished"]
[connection signal="timeout" from="ScrollTimer" to="." method="_on_scroll_timer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
